--- a/CalcWPF/MainWindow.xaml
+++ b/CalcWPF/MainWindow.xaml
@@ -7,14 +7,16 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="300">
     <Grid>
-        <Grid.ColumnDefinitions> <!-- Кол-во столбцов -->
-            <ColumnDefinition /> 
+        <Grid.ColumnDefinitions>
+            <!-- Кол-во столбцов -->
+            <ColumnDefinition />
             <ColumnDefinition />
             <ColumnDefinition />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
-        <Grid.RowDefinitions> <!-- Кол-во строк -->
+        <Grid.RowDefinitions>
+            <!-- Кол-во строк -->
             <RowDefinition />
             <RowDefinition />
             <RowDefinition />
@@ -23,11 +25,42 @@
             <RowDefinition />
             <RowDefinition />
         </Grid.RowDefinitions>
-        
+
         <!-- Buttons -->
-        <Button Grid.Row="3" Grid.Column="0" x:Name="bnt_7"> 7 </Button>
-        <Button Grid.Row="3" Grid.Column="1" x:Name="bnt_8"> 8 </Button>
-        <Button Grid.Row="3" Grid.Column="2" x:Name="bnt_9"> 9 </Button>
-        
+        <Button Grid.Row="3" Grid.Column="0" x:Name="bnt_7" Click="bnt_7_Click">7</Button>
+        <Button Grid.Row="3" Grid.Column="1" x:Name="bnt_8" Click="bnt_8_Click">8</Button>
+        <Button Grid.Row="3" Grid.Column="2" x:Name="bnt_9">9</Button>
+        <Button Grid.Row="4" Grid.Column="0" x:Name="bnt_4">4</Button>
+        <Button Grid.Row="4" Grid.Column="1" x:Name="bnt_5">5</Button>
+        <Button Grid.Row="4" Grid.Column="2" x:Name="bnt_6">6</Button>
+        <Button Grid.Row="5" Grid.Column="0" x:Name="bnt_1">1</Button>
+        <Button Grid.Row="5" Grid.Column="1" x:Name="bnt_2">2</Button>
+        <Button Grid.Row="5" Grid.Column="2" x:Name="bnt_3">3</Button>
+        <Button Grid.Row="6" Grid.Column="1" x:Name="bnt_0">0</Button>
+
+        <!-- Operations -->
+        <Button Grid.Row="1" Grid.Column="0" x:Name="bnt_min">min</Button>
+        <Button Grid.Row="1" Grid.Column="1" x:Name="bnt_max">max</Button>
+        <Button Grid.Row="1" Grid.Column="2" x:Name="bnt_avg">avg</Button>
+        <Button Grid.Row="1" Grid.Column="3" x:Name="bnt_pow">x^y</Button>
+
+        <Button Grid.Row="2" Grid.Column="3" x:Name="bnt_div">/</Button>
+        <Button Grid.Row="3" Grid.Column="3" x:Name="bnt_mult">*</Button>
+        <Button Grid.Row="4" Grid.Column="3" x:Name="bnt_minus">-</Button>
+        <Button Grid.Row="5" Grid.Column="3" x:Name="bnt_plus" Click="bnt_plus_Click">+</Button>
+        <Button Grid.Row="6" Grid.Column="3" x:Name="bnt_eq" Click="bnt_eq_Click">=</Button>
+
+        <Button Grid.Row="6" Grid.Column="2" x:Name="bnt_comma">,</Button>
+        <Button Grid.Row="6" Grid.Column="0" x:Name="bnt_plusminus">+/-</Button>
+
+        <!-- Clear buttons -->
+        <Button Grid.Row="2" Grid.Column="0" x:Name="bnt_C">С</Button>
+        <Button Grid.Row="2" Grid.Column="1" x:Name="bnt_CE">CE</Button>
+        <Button Grid.Row="2" Grid.Column="2" x:Name="bnt_backspace" Content="&lt;&lt;&lt;"></Button>
+
+        <!-- Text box -->
+        <TextBox Grid.Row="0" Grid.ColumnSpan="4" TextAlignment="Right" VerticalAlignment="Bottom" FontSize="40" x:Name="txtValue">0</TextBox>
+
+
     </Grid>
 </Window>
