--- a/CalcWPF/MainWindow.xaml
+++ b/CalcWPF/MainWindow.xaml
@@ -26,17 +26,17 @@
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <!-- Buttons -->
-        <Button Grid.Row="3" Grid.Column="0" x:Name="bnt_7" Click="bnt_7_Click">7</Button>
-        <Button Grid.Row="3" Grid.Column="1" x:Name="bnt_8" Click="bnt_8_Click">8</Button>
-        <Button Grid.Row="3" Grid.Column="2" x:Name="bnt_9">9</Button>
-        <Button Grid.Row="4" Grid.Column="0" x:Name="bnt_4">4</Button>
-        <Button Grid.Row="4" Grid.Column="1" x:Name="bnt_5">5</Button>
-        <Button Grid.Row="4" Grid.Column="2" x:Name="bnt_6">6</Button>
-        <Button Grid.Row="5" Grid.Column="0" x:Name="bnt_1">1</Button>
-        <Button Grid.Row="5" Grid.Column="1" x:Name="bnt_2">2</Button>
-        <Button Grid.Row="5" Grid.Column="2" x:Name="bnt_3">3</Button>
-        <Button Grid.Row="6" Grid.Column="1" x:Name="bnt_0">0</Button>
+        <!-- Buttons numbers -->
+        <Button Grid.Row="3" Grid.Column="0" x:Name="bnt_7" Click="bnt_num_Click">7</Button>
+        <Button Grid.Row="3" Grid.Column="1" x:Name="bnt_8" Click="bnt_num_Click">8</Button>
+        <Button Grid.Row="3" Grid.Column="2" x:Name="bnt_9" Click="bnt_num_Click">9</Button>
+        <Button Grid.Row="4" Grid.Column="0" x:Name="bnt_4" Click="bnt_num_Click">4</Button>
+        <Button Grid.Row="4" Grid.Column="1" x:Name="bnt_5" Click="bnt_num_Click">5</Button>
+        <Button Grid.Row="4" Grid.Column="2" x:Name="bnt_6" Click="bnt_num_Click">6</Button>
+        <Button Grid.Row="5" Grid.Column="0" x:Name="bnt_1" Click="bnt_num_Click">1</Button>
+        <Button Grid.Row="5" Grid.Column="1" x:Name="bnt_2" Click="bnt_num_Click">2</Button>
+        <Button Grid.Row="5" Grid.Column="2" x:Name="bnt_3" Click="bnt_num_Click">3</Button>
+        <Button Grid.Row="6" Grid.Column="1" x:Name="bnt_0" Click="bnt_num_Click">0</Button>
 
         <!-- Operations -->
         <Button Grid.Row="1" Grid.Column="0" x:Name="bnt_min">min</Button>
@@ -46,7 +46,7 @@
 
         <Button Grid.Row="2" Grid.Column="3" x:Name="bnt_div">/</Button>
         <Button Grid.Row="3" Grid.Column="3" x:Name="bnt_mult">*</Button>
-        <Button Grid.Row="4" Grid.Column="3" x:Name="bnt_minus">-</Button>
+        <Button Grid.Row="4" Grid.Column="3" x:Name="bnt_minus" Click="bnt_minus_Click">-</Button>
         <Button Grid.Row="5" Grid.Column="3" x:Name="bnt_plus" Click="bnt_plus_Click">+</Button>
         <Button Grid.Row="6" Grid.Column="3" x:Name="bnt_eq" Click="bnt_eq_Click">=</Button>
 
