--- a/CalcWPF/MainWindow.xaml
+++ b/CalcWPF/MainWindow.xaml
@@ -50,7 +50,7 @@
         <Button Grid.Row="5" Grid.Column="3" x:Name="bnt_plus" Click="bnt_op_Click">+</Button>
         <Button Grid.Row="6" Grid.Column="3" x:Name="bnt_eq" Click="bnt_eq_Click">=</Button>
 
-        <Button Grid.Row="6" Grid.Column="2" x:Name="bnt_comma">,</Button>
+        <Button Grid.Row="6" Grid.Column="2" x:Name="bnt_comma" Click="bnt_comma_Click">,</Button>
         <Button Grid.Row="6" Grid.Column="0" x:Name="bnt_plusminus" Click="bnt_plusminus_Click">+/-</Button>
 
         <!-- Clear buttons -->
