--- a/CalcWPF/MainWindow.xaml
+++ b/CalcWPF/MainWindow.xaml
@@ -27,36 +27,36 @@
         </Grid.RowDefinitions>
 
         <!-- Buttons numbers -->
-        <Button Grid.Row="3" Grid.Column="0" x:Name="bnt_7" Click="bnt_num_Click">7</Button>
-        <Button Grid.Row="3" Grid.Column="1" x:Name="bnt_8" Click="bnt_num_Click">8</Button>
-        <Button Grid.Row="3" Grid.Column="2" x:Name="bnt_9" Click="bnt_num_Click">9</Button>
-        <Button Grid.Row="4" Grid.Column="0" x:Name="bnt_4" Click="bnt_num_Click">4</Button>
-        <Button Grid.Row="4" Grid.Column="1" x:Name="bnt_5" Click="bnt_num_Click">5</Button>
-        <Button Grid.Row="4" Grid.Column="2" x:Name="bnt_6" Click="bnt_num_Click">6</Button>
-        <Button Grid.Row="5" Grid.Column="0" x:Name="bnt_1" Click="bnt_num_Click">1</Button>
-        <Button Grid.Row="5" Grid.Column="1" x:Name="bnt_2" Click="bnt_num_Click">2</Button>
-        <Button Grid.Row="5" Grid.Column="2" x:Name="bnt_3" Click="bnt_num_Click">3</Button>
-        <Button Grid.Row="6" Grid.Column="1" x:Name="bnt_0" Click="bnt_num_Click">0</Button>
+        <Button Grid.Row="3" Grid.Column="0" x:Name="btn_7" Click="btn_num_Click">7</Button>
+        <Button Grid.Row="3" Grid.Column="1" x:Name="btn_8" Click="btn_num_Click">8</Button>
+        <Button Grid.Row="3" Grid.Column="2" x:Name="btn_9" Click="btn_num_Click">9</Button>
+        <Button Grid.Row="4" Grid.Column="0" x:Name="btn_4" Click="btn_num_Click">4</Button>
+        <Button Grid.Row="4" Grid.Column="1" x:Name="btn_5" Click="btn_num_Click">5</Button>
+        <Button Grid.Row="4" Grid.Column="2" x:Name="btn_6" Click="btn_num_Click">6</Button>
+        <Button Grid.Row="5" Grid.Column="0" x:Name="btn_1" Click="btn_num_Click">1</Button>
+        <Button Grid.Row="5" Grid.Column="1" x:Name="btn_2" Click="btn_num_Click">2</Button>
+        <Button Grid.Row="5" Grid.Column="2" x:Name="btn_3" Click="btn_num_Click">3</Button>
+        <Button Grid.Row="6" Grid.Column="1" x:Name="btn_0" Click="btn_num_Click">0</Button>
 
         <!-- Operations -->
-        <Button Grid.Row="1" Grid.Column="0" x:Name="bnt_min" Click="bnt_op_Click">min</Button>
-        <Button Grid.Row="1" Grid.Column="1" x:Name="bnt_max" Click="bnt_op_Click">max</Button>
-        <Button Grid.Row="1" Grid.Column="2" x:Name="bnt_avg" Click="bnt_op_Click">avg</Button>
-        <Button Grid.Row="1" Grid.Column="3" x:Name="bnt_pow" Click="bnt_op_Click">x^y</Button>
+        <Button Grid.Row="1" Grid.Column="0" x:Name="btn_min" Click="btn_op_Click">min</Button>
+        <Button Grid.Row="1" Grid.Column="1" x:Name="btn_max" Click="btn_op_Click">max</Button>
+        <Button Grid.Row="1" Grid.Column="2" x:Name="btn_avg" Click="btn_op_Click">avg</Button>
+        <Button Grid.Row="1" Grid.Column="3" x:Name="btn_pow" Click="btn_op_Click">x^y</Button>
 
-        <Button Grid.Row="2" Grid.Column="3" x:Name="bnt_div" Click="bnt_op_Click">/</Button>
-        <Button Grid.Row="3" Grid.Column="3" x:Name="bnt_mult" Click="bnt_op_Click">*</Button>
-        <Button Grid.Row="4" Grid.Column="3" x:Name="bnt_minus" Click="bnt_op_Click">-</Button>
-        <Button Grid.Row="5" Grid.Column="3" x:Name="bnt_plus" Click="bnt_op_Click">+</Button>
-        <Button Grid.Row="6" Grid.Column="3" x:Name="bnt_eq" Click="bnt_eq_Click">=</Button>
+        <Button Grid.Row="2" Grid.Column="3" x:Name="btn_div" Click="btn_op_Click">/</Button>
+        <Button Grid.Row="3" Grid.Column="3" x:Name="btn_mult" Click="btn_op_Click">*</Button>
+        <Button Grid.Row="4" Grid.Column="3" x:Name="btn_minus" Click="btn_op_Click">-</Button>
+        <Button Grid.Row="5" Grid.Column="3" x:Name="btn_plus" Click="btn_op_Click">+</Button>
+        <Button Grid.Row="6" Grid.Column="3" x:Name="btn_eq" Click="btn_eq_Click">=</Button>
 
-        <Button Grid.Row="6" Grid.Column="2" x:Name="bnt_comma" Click="bnt_comma_Click">,</Button>
-        <Button Grid.Row="6" Grid.Column="0" x:Name="bnt_plusminus" Click="bnt_plusminus_Click">+/-</Button>
+        <Button Grid.Row="6" Grid.Column="2" x:Name="btn_comma" Click="btn_comma_Click">,</Button>
+        <Button Grid.Row="6" Grid.Column="0" x:Name="btn_plusminus" Click="btn_plusminus_Click">+/-</Button>
 
         <!-- Clear buttons -->
-        <Button Grid.Row="2" Grid.Column="0" x:Name="bnt_C" Click="bnt_C_Click">С</Button>
-        <Button Grid.Row="2" Grid.Column="1" x:Name="bnt_CE" Click="bnt_CE_Click">CE</Button>
-        <Button Grid.Row="2" Grid.Column="2" x:Name="bnt_backspace" Click="bnt_backspace_Click">DEL</Button>
+        <Button Grid.Row="2" Grid.Column="0" x:Name="btn_C" Click="btn_C_Click">С</Button>
+        <Button Grid.Row="2" Grid.Column="1" x:Name="btn_CE" Click="btn_CE_Click">CE</Button>
+        <Button Grid.Row="2" Grid.Column="2" x:Name="btn_backspace" Click="btn_backspace_Click">DEL</Button>
 
         <!-- Text box -->
         <TextBox Grid.Row="0" Grid.ColumnSpan="4" TextAlignment="Right" VerticalAlignment="Bottom" FontSize="40" x:Name="txtValue">0</TextBox>
